modify image names

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <img src="./images/landscapes/05.jpg" alt="">
                 </li>
                 <li>
-                    <img src="./images/landscapes/06.JPEG" alt="">
+                    <img src="./images/landscapes/06.jpg" alt="">
                 </li>
                 <li>
                     <img src="./images/landscapes/07.jpg" alt="">
@@ -69,7 +69,7 @@
                     <img src="./images/landscapes/08.jpg" alt="">
                 </li>
                 <li>
-                    <img src="./images/landscapes/09.JPEG" alt="">
+                    <img src="./images/landscapes/09.jpg" alt="">
                 </li>
                 <li>
                     <img src="./images/landscapes/10.jpg" alt="">
