--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
         href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe&family=Bebas+Neue&family=Raleway:wght@100;300;500;800&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/55d8135dd7.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Charlotte Raz</title>
 </head>
 
 <body>
