--- a/videography.html
+++ b/videography.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" rel="stylesheet">
     
-    <link rel="stylesheet" href="style.css">
+    <link rel=“stylesheet” type=“text/css” href=“styles.css”>
     
     <link
         href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe&family=Bebas+Neue&family=Raleway:wght@100;300;500;800&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/55d8135dd7.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Charlotte Raz</title>
 </head>
 <body>
     <header>
