image extension fixed

--- a/index.html
+++ b/index.html
@@ -52,22 +52,22 @@
                     <img src="./images/landscapes/02.jpg" alt="">
                 </li>
                 <li>
-                    <img src="./images/landscapes/03.jpg" alt="">
+                    <img src="./images/landscapes/03.JPG" alt="">
                 </li>
                 <li>
-                    <img src="./images/landscapes/04.jpg" alt="">
+                    <img src="./images/landscapes/04.JPG" alt="">
                 </li>
                 <li>
-                    <img src="./images/landscapes/05.jpg" alt="">
+                    <img src="./images/landscapes/05.JPG" alt="">
                 </li>
                 <li>
                     <img src="./images/landscapes/06.jpg" alt="">
                 </li>
                 <li>
-                    <img src="./images/landscapes/07.jpg" alt="">
+                    <img src="./images/landscapes/07.JPG" alt="">
                 </li>
                 <li>
-                    <img src="./images/landscapes/08.jpg" alt="">
+                    <img src="./images/landscapes/08.JPG" alt="">
                 </li>
                 <li>
                     <img src="./images/landscapes/09.jpg" alt="">
@@ -104,13 +104,13 @@
                     <img src="./images/portraits/2.jpg" alt="">
                 </li>
                 <li>
-                    <img src="./images/portraits/18.jpg" alt="">
+                    <img src="./images/portraits/18.JPG" alt="">
                 </li>
                 <li>
                     <img src="./images/portraits/6.jpg" alt="">
                 </li>
                 <li>
-                    <img src="./images/portraits/19.jpg" alt="">
+                    <img src="./images/portraits/19.JPG" alt="">
                 </li>
             </ul>
         
