--- a/contact.html
+++ b/contact.html
@@ -6,12 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-
-    <link
-        href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe&family=Bebas+Neue&family=Raleway:wght@100;300;500;800&display=swap"
-        rel="stylesheet">
     <script src="https://kit.fontawesome.com/55d8135dd7.js" crossorigin="anonymous"></script>
     <title>Charlotte Raz</title>
 </head>
